# rarime-rust-sdk

./: .gitignore  Cargo.toml  README.md  build.rs  rarime_rust_sdk.udl
docs/: Android-build.md  MacOS-clang-install.md
src/: base64.rs  document.rs  errors.rs  flow.rs  freedomtool.rs  hash_algorithm.rs  lib.rs  masters_certificate_pool.rs  owned_cert.rs  passport.rs  poll.rs  rarime.rs  rarimo_utils.rs  signature_algorithm.rs  sod.rs  treap_tree.rs  utils.rs
src/api/: Cargo.toml
src/api/src/: errors.rs  lib.rs
src/api/src/types/: ipfs_voting.rs  mod.rs  relayer_light_register.rs  relayer_send_transaction.rs  verify_sod.rs
src/call_data_builder/: Cargo.toml
src/call_data_builder/src/: errors.rs  lib.rs
src/call_data_builder/src/types/: mod.rs  noir_call_data.rs
src/contracts/: Cargo.toml
src/contracts/src/: call_data_builder.rs  errors.rs  lib.rs  poseidon_smt.rs  proposals_state.rs  state_keeper.rs  utils.rs
src/contracts/src/abi/: IDCardVoting.json  PoseidonSMT.json  ProposalsState.json  RegistrationSimple.json  StateKeeper.json
src/contracts/src/contract/: id_card_voting.rs  mod.rs  poseidon_smt.rs  proposals_state.rs  state_keeper.rs
src/proof/: Cargo.toml
src/proof/src/: lib.rs  utils.rs
src/proofs/: .gitignore  Cargo.toml
src/proofs/src/: errors.rs  lib.rs  utils.rs
src/proofs/src/assets/: query.json  register_lite_224.json  register_lite_256.json  register_lite_512.json
src/proofs/src/assets/lite_register/: register_lite_160.json  register_lite_384.json
src/rfc/: mod.rs  rfc5280.rs  rfc5652.rs
src/utils/: types.rs
tests/: certificate_pool_test.rs  generate_query_proof_test.rs  get_citizenship_test.rs  get_document_status_tests.rs  get_identity_status_tests.rs  get_polls_data_test.rs  get_proposal_criteria_test.rs  light_registration_test.rs  masters_certificate_pool_test.rs  mrz_test.rs  passport_test.rs  validate_test.rs  verify_sod_test.rs  voting_test.rs
