[package]
name = "rarime-rust-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
asn1 = { git = "https://github.com/rarimo/rust-asn1", rev = "19db8629e2c1591b98a204740c0438031281db69"}
base64 = "0.22.1"
const-oid = "0.9.6"
digest = "0.10.7"
env_logger = "0.11.7"
hex = "0.4.3"
lazy_static = "1.5.0"
log = "0.4.26"
num-bigint-dig = "=0.8.4"
pem = "3.0.5"
rsa = { version = "0.9.8", features = ["sha1", "sha2"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.8"
thiserror = "2.0.12"
sha3 = "0.11.0-rc.3"
num-traits = "0.2.19"
num-bigint = "0.4.6"
der = "0.7.9"
regex = "1.11.1"
cms = "0.2.3"
x509-parser = "0.18.0"
der-parser = "10.0.0"
babyjubjub-rs = "0.0.11"
