[package]
name = "proofs"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0.12"
serde_json = "1.0.140"
noir_rs = { git = "https://github.com/rarimo/noir_rs.git", branch = "v1.0.3", features = ["barretenberg"] }

[patch.crates-io]
proptest = { git = "https://github.com/proptest-rs/proptest", tag = "v1.6.0" }